# flashml

./: .gitignore  README.md  pyproject.toml  setup.py  test.py
doc/: setup_runpod.sh
docs/plans/: 2026-03-06-plot-dist-console-design.md  2026-03-06-plot-dist-console.md
flashml/: .betterexcel_syntax_check.pyc.1990795551216  __init__.py  main.py  mlflow.db  test.ipynb  test.py  train_template.ipynb
flashml/classification/: __init__.py  baselines.py  compute_best_threshold.py  dummy_dataset.py  metrics.py  plot_metrics.py  smooth_labels.py
flashml/clustering/: __init__.py  kmeans.py
flashml/docs/: conf.py  flashml.rl.rst  flashml.schedulers.rst  index.rst  modules.rst
flashml/docs/_build/doctrees/: environment.pickle  flashml.doctree  flashml.legacy.doctree  flashml.modules.doctree  flashml.nlp.doctree  flashml.rl.doctree  flashml.schedulers.doctree  index.doctree  modules.doctree
flashml/docs/_build/html/: .buildinfo  .buildinfo.bak  flashml.html  flashml.legacy.html  flashml.modules.html  flashml.nlp.html  flashml.rl.html  flashml.schedulers.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
flashml/info/: __init__.py  display_metrics.py  log_metrics.py  plot_graph.py
flashml/info/rl/: __init__.py  log_episode.py
flashml/inspect/: __init__.py  inspect_model.py  inspect_tokenizer.py  model_inspector.py  model_inspector_notebook.py  tokenizer_inspector.py  tokenizer_inspector_window.py
flashml/inspect_ml/: model_inspector_window.py  tokenizer_inspector_notebook.py
flashml/legacy/: __init__.py  inspect_model.py  inspect_tokenizer.py  inspector.py
flashml/llm/: __init__.py  chat.py  chatbot_client.py  chatbot_clientv2.py  compute_perplexity.py  gemini_api_batch_builder.py  llm_merging.py  llm_quantization.py  llm_utils.py  merging.py  openai_api_batch_builder.py  openai_chatting.py  plot_chat.py  vllm_chat.py  vllm_chat_openai_entrypoint.py  vllm_compute_log_probs.py  vllm_compute_logprobs.py  vllm_configs.py  vllm_engine.py
flashml/main_tools/: batching.py  benchmark.py  colors.py  inspection.py  load_args.py  load_yaml_configs.py  log_metrics.py  logging_jsonl.py  lorem_ipsum.py  manipulation.py  mlflow_logging.py  plot_chat.py  plot_confusion_matrix.py  plot_distribution.py  plot_graph.py  plot_rt_graph.py  plot_tensor.py  plot_tsne.py  printing.py  resource_monitor.py  send_telegram_notification.py  sound_effects.py
flashml/mlruns/.trash/675932784172278896/: meta.yaml
flashml/mlruns/0/: meta.yaml
flashml/mlruns/0/0012e9190c4d4370b1f4468e7bfb0014/: meta.yaml
flashml/mlruns/0/0649dd0aac2b4613bc15c4286568441f/: meta.yaml
flashml/mlruns/0/112e7ce282c64fb5a111a0c9c2c38d9d/: meta.yaml
flashml/mlruns/0/13cdd9c7728d45ee988a4b1aae88b42d/: meta.yaml
flashml/mlruns/0/1b388af5479d45f2b1c4d9eb9ac69d7b/: meta.yaml
flashml/mlruns/0/1b91a90a6f9347a7a747e0af5e71e1b4/: meta.yaml
flashml/mlruns/0/1f5b979d104043fb811063b5b424824a/: meta.yaml
flashml/mlruns/0/1fe69b7fb9f649af94e7bb5164b71a2a/: meta.yaml
flashml/modules/: DeepSeekMoE.py  FFN.py  GQA.py  MHA.py  MLA.py  MinGRU.py  MinLSTM.py  OrnsteinUhlenbeckProcess.py  PolyakAveraging.py  RMSNorm.py  Rish.py  SwiGLU.py  VAE.py  __init__.py  pRoPE.py
flashml/nlp/: __init__.py  text_extractors.py  text_removers.py  text_replacers.py  text_special_prepreocessing.py
flashml/regression/: __init__.py  baselines.py  correlate.py  dummy_dataset.py  metrics.py
flashml/rl/: __init__.py  log_episode.py
flashml/schedulers/: LRCosineAnnealingWithLinearWarmup.py  LRScheduler.py  __init__.py
flashml/standalone_tools/: BetterExcel.py  ColorPicker.py  FileConverter.py  ImageConvertor.py  ImageProcessor.py  LocalChat.py  PerplexityChecker.py  README.md  environment.yml
flashml/tools/: EMA.py  __init__.py  benchmark.py  colors.py  dataset_handling.py  extern.py  inspect_model.py  inspection.py  log.py  log_metrics.py  log_session.py  manipulation.py  parallel.py  plot_confusion_matrix.py  plot_distribution.py  plot_graph.py  plot_rt_graph.py  plot_tensor.py  plot_tsne.py  resource_monitor.py  sound_effects.py
flashml/tools/nlp/: __init__.py  display_chat.py  text_preprocessing.py
flashml/tools/rl/: __init__.py  display_episodes.py  log_episode.py
flashml/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
info/: __init__.py  benchmark.py  display_metrics.py  display_training_log.py  display_usage.py  log_metrics.py  memory_management.py  plot_confusion_matrix.py  plot_graph.py  resource_monitor.py  training_log_progress.py
info/rl/: display_episodes.py  log_episode.py
modules/: MHA.py  RMSNorm.py  Rish.py  __init__.py  minGRU.py
schedulers/: __init__.py
standalone_tools/: ImageProcessor.py  ImageResizer.py
(+533 files in other folders)
