[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashml"
version = "0.6.7"
authors = [{ name = "kbradu" }]
dependencies = [
    "magic-wormhole", # used for file transfer (call wormhole send <foldername>) - it handles cross-platform file transfer
    "ipywidgets",
    "pydantic", # used here for BaseClass in structured output with llms
    "mlflow==3.3.0",
    "matplotlib",
    "plotly",
    "numpy",
    "tqdm",
    "psutil",
    "pillow",
    "pynvml",
    "scikit-learn",
    "pynput",
    "pyautogui",
    "pyperclip",
    "tkinterdnd2",
    "PyQt6",
    "openpyxl",
    "joblib",
    "polars",
    "pandas",
    "spacy",
    "openai",
    "google-genai",
    "nbformat",
    "thefuzz", # used for fuzzy matching 
    "kneed", # used to find the best number of clusters for K-means clustering
    "glances", # used to monitor system resources (for linux use nvtop)
    "lorem",
    "Faker", #lipsum but in english

    # extras
    "torch",
    "torchtune",
    "torchao",
    "torchinfo",
    "python-dotenv",
    "ollama",
    "torch-optimi",
    "gymnasium",
    "transformers",
    "unsloth",
    "trl",
    "weave",
    "wandb",
    "evaluate",
    "hydra-core",
    "rouge_score",
    "peft",
    "bitsandbytes",
    "ipykernel",
    "notebook",
    "jupyterlab",
    "opencv-python",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "dspy",
    "fuzzywuzzy",
    "python-Levenshtein",
    #,

    
    #"auto-gptq",
    #"llmcompressor",
    #"vllm",

    "python-telegram-bot",
]



[tool.setuptools]
packages = ["flashml"]
