[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flashml"
version = "0.6.7"
authors = [{ name = "kbradu" }]
dependencies = [
    # do not add flash_attn, xformers etc.
    #"unsloth",
    #"transformers",
    #"trl",
    "hydra-core",
    "mlflow==3.3.0",
    "python-telegram-bot",

    "magic-wormhole",

    "PyPDF2",
    "pydantic", # used here for BaseClass in structured output with llms
    
    "matplotlib",
    "plotly",
    "numpy",
    "tqdm",
    "psutil",
    "pillow",
    "pynvml",
    "scikit-learn",
    "pynput",
    "pyautogui",
    "pyperclip",
    "tkinterdnd2",
    "PyQt6",
    "openpyxl",
    "joblib",
    "polars",
    "pandas",
    "spacy",
    "openai",
    "google-genai",
    "nbformat",
    "thefuzz", # used for fuzzy matching 
    "kneed", # used to find the best number of clusters for K-means clustering
    "glances", # used to monitor system resources (for linux use nvtop)
    "lorem",
    "Faker", #lipsum but in english

    "python-dotenv",
    #"ollama",
    #"torch-optimi",
    #"gymnasium",
    #"sentence-transformers",
    "weave",
    "wandb",
    "evaluate",
    
    "rouge_score",
    

    "opencv-python",
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
    "dspy",
    "fuzzywuzzy",
    "python-Levenshtein",

    #"ipywidgets",
    #"ipykernel",
    #"notebook",
    #"jupyterlab",
    #"auto-gptq",
    #"llmcompressor",
    #"vllm",

    
]



[tool.setuptools]
packages = ["flashml"]
